--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 				<meta http-equiv="Page-Exit" content="revealTrans(Transition=6)">
 				<meta charset="utf-8">
 				<link type="text/css" rel="stylesheet" href="css/index.css"/>
-				<title>foog for daily</title>
+				<title>food for daily</title>
 				<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 				<script  type="text/javascript"  src="js/testjq.js" ></script>
 
